--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wdio/spec-reporter": "^7.10.1",
     "chromedriver": "^92.0.1",
     "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5",
     "wdio-chromedriver-service": "^7.2.0"
   }
