--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@wdio/cli": "^7.10.1"
   },
   "devDependencies": {
+    "@types/supertest": "^2.0.11",
     "@wdio/allure-reporter": "^7.10.1",
     "@wdio/cucumber-framework": "^7.10.1",
     "@wdio/local-runner": "^7.10.1",
     "@wdio/spec-reporter": "^7.10.1",
     "chromedriver": "^92.0.1",
+    "supertest": "^6.1.6",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5",
