--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
       "target":"ES5",
+       "esModuleInterop":true,
       "types": ["node", "webdriverio/async", "@wdio/cucumber-framework", "expect-webdriverio"]
+       
     }
   }
