--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
       "target":"ES5",
-       "esModuleInterop":true,
-      "types": ["node", "webdriverio/async", "@wdio/cucumber-framework", "expect-webdriverio"]
+      "esModuleInterop":true,
+      "types": ["node", "webdriverio/async", "@wdio/cucumber-framework", "expect-webdriverio"],
+      "baseUrl": "."
        
     }
   }
