--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "target":"ES5",
+      "resolveJsonModule": true,
       "esModuleInterop":true,
       "types": ["node", "webdriverio/async", "@wdio/cucumber-framework", "expect-webdriverio"],
       "baseUrl": "."
